--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Persistent To-Do List</h1>
+    <div id="quoteInput"></div>
     <hr>
     <p id="currentListText">Current List: <span id="currentList"></span></p>
     <button onclick="removeCookie()">Leave List</button><br><br>
